--- a/public/stylesheets/blogStyles.css
+++ b/public/stylesheets/blogStyles.css
@@ -1,6 +1,6 @@
 body {
   font: 54px "Lucida Grande", Helvetica, Arial, sans-serif;
-  height: 100%;
+  min-height: 100vh;
 }
 
 #topBanner{
@@ -9,7 +9,8 @@ body {
 
 /* Left div under top banner*/
 #leftContent{
-  height: 100%;
+  background-color: #002654;
+  width: 15%;
 }
 
 /* Center div under top banner - This is where main content is placed*/
@@ -26,7 +27,7 @@ body {
 
 /* Right div under top banner*/
 #rightContent{
-  height: 100%;
+  width: 15%;
 }
 
 
